--- a/2.Jquery/public/index.html
+++ b/2.Jquery/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 
-  <title>Hello, Bootstrap!</title>
+  <title>Register!</title>
 </head>
 
 <body>
@@ -46,26 +46,19 @@
           <div class="form-group col-12">
             <label for="username">Username <span class="text-danger">*</span></label>
             <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+            <small id="username-invalid" class="invalid-feedback"></small>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-6">
             <label for="first-name">First Name <span class="text-danger">*</span></label>
             <input type="text" class="form-control" name="first-name" id="first-name" placeholder="First Name">
+            <small id="first-name-invalid" class="invalid-feedback"></small>
           </div>
           <div class="form-group col-sm-6">
             <label for="last-name">Last Name <span class="text-danger">*</span></label>
             <input type="text" class="form-control" name="last-name" id="last-name" placeholder="Last Name">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-sm-6">
-            <label for="first-name">First Name <span class="text-danger">*</span></label>
-            <input type="text" class="form-control" name="first-name" id="first-name" placeholder="First Name">
-          </div>
-          <div class="form-group col-sm-6">
-            <label for="last-name">Last Name <span class="text-danger">*</span></label>
-            <input type="text" class="form-control" name="last-name" id="last-name" placeholder="Last Name">
+            <small id="last-name-invalid" class="invalid-feedback"></small>
           </div>
         </div>
         <div class="form-row">
@@ -106,17 +99,17 @@
         </div>
       </form>
     </div>
-
   </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+  <script src="./validate.js"></script>
 </body>
 
 </html>
